--- a/kiemtraketthucmon/MainWindow.xaml
+++ b/kiemtraketthucmon/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="650">
     <Grid>
-        
+        <Button x:Name="ok" Content="OK" HorizontalAlignment="Left" Height="69" Margin="267,167,0,0" VerticalAlignment="Top" Width="101" Click="Ok_Click"/>
+
     </Grid>
 </Window>
